--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style media="screen">
       body {
         background: #3C6DF6;
+        overflow: hidden;
       }
       @font-face {
        font-family: 'Fugue';
