--- a/index.html
+++ b/index.html
@@ -18,7 +18,32 @@
        font-weight: normal;
        font-style: normal;
       }
+      @font-face {
+      	font-family: 'Conv_Firmin Didot';
+      	src: url('fonts/Firmin Didot.eot');
+      	src: local('☺'), url('fonts/Firmin Didot.woff') format('woff'), url('fonts/Firmin Didot.ttf') format('truetype'), url('fonts/Firmin Didot.svg') format('svg');
+      	font-weight: normal;
+      	font-style: normal;
+      }
+      .text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text9, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20, .help {
+        cursor: pointer;
+      }
       .level {
+        position: absolute;
+        width: 143px;
+        height: 71px;
+        left: 53px;
+        top: 62px;
+        background: #5F86F3;
+        font-size: 24px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-family: 'Fugue';
+        transition: 1s;
+      }
+      .level2 {
         position: absolute;
         width: 143px;
         height: 71px;
@@ -55,7 +80,23 @@
         left: 515px;
         top: 62px;
         background: #3C6DF6;
-        font-size: 36px;
+        font-size: 2.5vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        color: white;
+        font-family: 'Fugue';
+        transition: 1s;
+      }
+      .rules2 {
+        position: absolute;
+        width: 403px;
+        height: 85px;
+        left: 515px;
+        top: 62px;
+        background: #3C6DF6;
+        font-size: 2.5vw;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -98,8 +139,8 @@
         position: absolute;
         top: 200px;
         left: 53px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -108,8 +149,8 @@
         position: absolute;
         top: 200px;
         left: 253px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -118,8 +159,8 @@
         position: absolute;
         top: 200px;
         left: 453px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -128,8 +169,8 @@
         position: absolute;
         top: 200px;
         left: 653px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -138,8 +179,8 @@
         position: absolute;
         top: 200px;
         left: 853px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -148,8 +189,8 @@
         position: absolute;
         top: 200px;
         left: 1053px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -158,8 +199,8 @@
         position: absolute;
         top: 200px;
         left: 1253px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -168,8 +209,8 @@
         position: absolute;
         top: 400px;
         left: 53px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -178,8 +219,8 @@
         position: absolute;
         top: 400px;
         left: 253px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -188,19 +229,20 @@
         position: absolute;
         top: 382px;
         left: 453px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         font-family: 'PT Serif', serif;
         transition: 1s;
+        z-index: 10;
       }
       .text10 {
         position: absolute;
         top: 400px;
         left: 653px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -209,8 +251,8 @@
         position: absolute;
         top: 400px;
         left: 853px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -219,8 +261,8 @@
         position: absolute;
         top: 400px;
         left: 1053px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -229,8 +271,8 @@
         position: absolute;
         top: 400px;
         left: 1253px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -239,8 +281,8 @@
         position: absolute;
         top: 600px;
         left: 53px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -249,8 +291,8 @@
         position: absolute;
         top: 600px;
         left: 253px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -259,8 +301,8 @@
         position: absolute;
         top: 600px;
         left: 453px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -269,8 +311,8 @@
         position: absolute;
         top: 600px;
         left: 653px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -279,8 +321,8 @@
         position: absolute;
         top: 600px;
         left: 853px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -289,8 +331,8 @@
         position: absolute;
         top: 600px;
         left: 1053px;
-        width: 200px;
-        height: 200px;
+        width: 110px;
+        height: 150px;
         font-size: 150px;
         color: white;
         transition: 1s;
@@ -299,9 +341,174 @@
         position: absolute;
         top: 600px;
         left: 1253px;
+        width: 110px;
+        height: 150px;
+        font-size: 150px;
+        color: white;
+        transition: 1s;
+      }
+      #word1 {
+        position: absolute;
+        top: 250px;
+        left: 10px;
         width: 200px;
         height: 200px;
         font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word2 {
+        position: absolute;
+        top: 250px;
+        left: 160px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word3 {
+        position: absolute;
+        top: 250px;
+        left: 310px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word4 {
+        position: absolute;
+        top: 250px;
+        left: 460px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word5 {
+        position: absolute;
+        top: 250px;
+        left: 610px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word6 {
+        position: absolute;
+        top: 450px;
+        left: 10px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word7 {
+        position: absolute;
+        top: 450px;
+        left: 160px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word8 {
+        position: absolute;
+        top: 450px;
+        left: 310px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word9 {
+        position: absolute;
+        top: 450px;
+        left: 460px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word10 {
+        position: absolute;
+        top: 450px;
+        left: 610px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word11 {
+        position: absolute;
+        top: 650px;
+        left: 10px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word12 {
+        position: absolute;
+        top: 650px;
+        left: 160px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word13 {
+        position: absolute;
+        top: 650px;
+        left: 310px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word14 {
+        position: absolute;
+        top: 650px;
+        left: 460px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
+        color: white;
+        transition: 1s;
+      }
+      #word15 {
+        position: absolute;
+        top: 650px;
+        left: 610px;
+        width: 200px;
+        height: 200px;
+        font-size: 150px;
+        font-family: 'Conv_Firmin Didot';
         color: white;
         transition: 1s;
       }
@@ -315,18 +522,18 @@
         transition: 1s;
       }
       img {
-        width: 100%;
+        width: 460px;
         height: 100%;
       }
       .circle {
         position: absolute;
-        top: 300px;
-        left: 500px;
-        width: 300px;
-        height: 300px;
+        top: 390px;
+        left: 407px;
+        width: 200px;
+        height: 200px;
         border-radius: 150px;
         background: white;
-        transition: 2s;
+        transition: 1s;
       }
       @keyframes shakeX {
         from,
@@ -353,7 +560,7 @@
           animation-duration: 1s;
         }
         .showhelp {
-          transform: translate(-500px);
+          transform: translate(-475px);
         }
         .hidden {
           opacity: 0;
@@ -368,13 +575,13 @@
           filter: blur(0px);
         }
         .orange {
-          color: #3CCE2F;
+          color: #3C6DF6;
         }
 
     </style>
     <script>
     $(document).ready(function(){
-      $(".text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20").click(function(){
+      $(".text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20, .text21").click(function(){
         $(this).toggleClass("animate__shakeX");
       });
     });
@@ -386,7 +593,7 @@
         },1)
         setTimeout(function(){
           $(".text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text9, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20, .level, .section, .rules, .score").addClass("blur");
-        },1)
+        },2)
       });
     });
     $(document).ready(function(){
@@ -401,25 +608,47 @@
       $(".text9").click(function(){
         $(this).addClass("orange");
         setTimeout(function(){
-          $("div").addClass("hidden");
+          $(".circle").removeClass("blocker");
+        },1)
+        setTimeout(function(){
+          $(".circle").removeClass("hidden");
+        },2)
+        setTimeout(function(){
+          $(".text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20, .rules, .text9, .circle").addClass("hidden");
         },2000)
         setTimeout(function(){
-          $("div").addClass("blocker");
+          $(".text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20, .rules, .text9, .circle").addClass("blocker");
         },3201)
         setTimeout(function(){
-          $(".level, .section, .rules, .score, .help, .circle").removeClass("blocker");
+          $(".level2, .section, .rules2, .score, .help, .text21").removeClass("blocker");
         },3202)
         setTimeout(function(){
-          $(".level, .section, .rules, .score, .help, .circle").removeClass("hidden");
+          $(".level2, .section, .rules2, .score, .help, .text21").removeClass("hidden");
         },3203)
       });
     });
+    $(function () {
+      let count = 10;
+      // $('.score').html(count);
+      $('.text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20').click(function () {
+       count -= 1;
+       // $('.score').html(count);
+       $('.text9').click(function () {
+        // count *= 10;
+        $('.score').html(count * 10);
+
+     });
+    });
+  });
 
     </script>
   </head>
   <body>
     <div class="level">
       Уровень 1
+    </div>
+    <div class="level2 hidden blocker">
+      Уровень 2
     </div>
     <div class="section">
       Антиква
@@ -428,8 +657,12 @@
       Найди PT Serif
       <br>из Times New Roman
     </div>
+    <div class="rules2 hidden blocker">
+      Найди Bodoni
+      <br>из Didot
+    </div>
     <div class="score">
-      560
+      0
     </div>
     <div class="help">
       Помощь
@@ -497,8 +730,53 @@
     <div class="text20">
       A
     </div>
+    <div id="word1" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word2" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word3" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word4" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word5" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word6" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word7" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word8" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word9" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word10" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word11" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word12" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word13" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word14" class="text21 hidden blocker">
+      B
+    </div>
+    <div id="word15" class="text21 hidden blocker">
+      B
+    </div>
     <div class="helper">
-      <img src="images/Group 1.png" alt="">
+      <img src="images/helper1.png" alt="">
     </div>
     <div class="circle hidden blocker">
 
