--- a/index.html
+++ b/index.html
@@ -629,10 +629,10 @@
     });
     $(function () {
       let count = 10;
-      // $('.score').html(count);
+      $('.score').html(count);
       $('.text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20').click(function () {
        count -= 1;
-       // $('.score').html(count);
+       $('.score').html(count);
        $('.text9').click(function () {
         // count *= 10;
         $('.score').html(count * 10);
