--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel='stylesheet' media='screen and (min-width: 1200px) and (max-width: 1300px)' href='style/1280x800.css' />
     <link rel='stylesheet' media='screen and (min-width: 900px) and (max-width: 1200px)' href='style/1024x768.css' />
     <link rel='stylesheet' media='screen and (min-width: 500px) and (max-width: 900px)' href='style/768x1024.css' />
+    <link rel='stylesheet' media='screen and (min-width: 300px) and (max-width: 499px)' href='style/414x896.css' />
     <style media="screen">
       .forbody {
         background: #3C6DF6;
@@ -222,10 +223,10 @@
       $(".help").click(function(){
         $(".helper, .helper2, .helper3, .helper4, .helper5, .helper6, .helper7, .helper8").addClass("showhelp");
         setTimeout(function(){
-          $(".text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text9, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20, .level, .section, .rules, .score, .rules2, .level2, .text21, .text41, .form, .text22, .w3ord25, .level3, .rules3, .text23, .w4ord32, .level4, .rules4, .text24, .w5ord2, .level5, .rules5, .text25, .w6ord13, .level6, .rules6, .section2, .text26, .w7ord12, .level7, .rules7, .form2, .text27, .w8ord29, .level8, .rules8, .box8").removeClass("blur1");
+          $(".text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text9, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20, .level, .section, .rules, .score, .rules2, .level2, .text21, .text41, .form, .text22, .w3ord25, .level3, .rules3, .text23, .w4ord32, .level4, .rules4, .text24, .w5ord2, .level5, .rules5, .text25, .w6ord13, .level6, .rules6, .section2, .text26, .w7ord12, .level7, .rules7, .form2, .text27, .w8ord29, .level8, .rules8, .box8, .help").removeClass("blur1");
         },1)
         setTimeout(function(){
-          $(".text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text9, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20, .level, .section, .rules, .score, .rules2, .level2, .text21, .text41, .form, .text22, .w3ord25, .level3, .rules3, .text23, .w4ord32, .level4, .rules4, .text24, .w5ord2, .level5, .rules5, .text25, .w6ord13, .level6, .rules6, .section2, .text26, .w7ord12, .level7, .rules7, .form2, .text27, .w8ord29, .level8, .rules8, .box8").addClass("blur");
+          $(".text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text9, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20, .level, .section, .rules, .score, .rules2, .level2, .text21, .text41, .form, .text22, .w3ord25, .level3, .rules3, .text23, .w4ord32, .level4, .rules4, .text24, .w5ord2, .level5, .rules5, .text25, .w6ord13, .level6, .rules6, .section2, .text26, .w7ord12, .level7, .rules7, .form2, .text27, .w8ord29, .level8, .rules8, .box8, .help").addClass("blur");
         },2)
       });
     });
@@ -233,7 +234,7 @@
       $(".helper, .helper2, .helper3, .helper4, .helper5, .helper6, .helper7, .helper8").click(function(){
         $(".helper, .helper2, .helper3, .helper4, .helper5, .helper6, .helper7, .helper8").removeClass("showhelp");
         setTimeout(function(){
-          $(".text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text9, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20, .level, .section, .rules, .score, .rules2, .level2, .text21, .text41, .form, .text22, .w3ord25, .level3, .rules3, .text23, .w4ord32, .level4, .rules4, .text24, .w5ord2, .level5, .rules5, .text25, .w6ord13, .level6, .rules6, .section2, .text26, .w7ord12, .level7, .rules7, .form2, .text27, .w8ord29, .level8, .rules8, .box8").addClass("blur1");
+          $(".text, .text1, .text2, .text3, .text4, .text5, .text6, .text7, .text8, .text9, .text10, .text11, .text12, .text13, .text14, .text15, .text16, .text17, .text18, .text19, .text20, .level, .section, .rules, .score, .rules2, .level2, .text21, .text41, .form, .text22, .w3ord25, .level3, .rules3, .text23, .w4ord32, .level4, .rules4, .text24, .w5ord2, .level5, .rules5, .text25, .w6ord13, .level6, .rules6, .section2, .text26, .w7ord12, .level7, .rules7, .form2, .text27, .w8ord29, .level8, .rules8, .box8, .help").addClass("blur1");
         },1)
       });
     });
@@ -1094,6 +1095,7 @@ $(document).ready(function(){
     <div class="form2 hidden blocker">
       <img src="images/form2.png" alt="worn" class="form22">
       <img src="images/form4.png" alt="worn" class="form4">
+      <img src="images/formvert2.png" alt="worz" class="formvert2">
     </div>
     <div id="w8ord1" class="text27 hidden blocker">A</div>
     <div id="w8ord2" class="text27 hidden blocker">B</div>
