--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel='stylesheet' media='screen and (min-width: 900px) and (max-width: 1200px)' href='style/1024x768.css' />
     <link rel='stylesheet' media='screen and (min-width: 500px) and (max-width: 900px)' href='style/768x1024.css' />
     <link rel='stylesheet' media='screen and (min-width: 300px) and (max-width: 499px)' href='style/414x896.css' />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style media="screen">
       .forbody {
         background: #3C6DF6;
